--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
             <div class="product-info">
                 <h1>{{ product }}</h1>
+                <!-- conditional rendering -->
+                <p v-show="inStock">In Stock</p>
+                <span v-if="onSale">Sale!</span>
+                <!-- <p v-if="inventory > 10">In Stock</p>
+                <p v-else-if="inventory <=10 && inventory > 0">Almost sold out! Hurry!</p>
+                <p v-else="OutStock">Out of Stock</p> -->
+                <!-- <a :href="link" target="_blank">See more products like this</a> -->
             </div>
 
 
