--- a/index.html
+++ b/index.html
@@ -25,11 +25,20 @@
                 <h1>{{ product }}</h1>
                 <!-- conditional rendering -->
                 <p v-show="inStock">In Stock</p>
-                <span v-if="onSale">Sale!</span>
+                <!-- <span v-if="onSale">Sale!</span> -->
                 <!-- <p v-if="inventory > 10">In Stock</p>
                 <p v-else-if="inventory <=10 && inventory > 0">Almost sold out! Hurry!</p>
                 <p v-else="OutStock">Out of Stock</p> -->
                 <!-- <a :href="link" target="_blank">See more products like this</a> -->
+                <ul>
+                    <li v-for="detail in details">{{ detail }}</li>
+                </ul>
+                <ul>
+                    <li v-for="size in sizes">{{ size }}</li>
+                </ul>
+                <div v-for="variant in variants" :key="variant.variantId">
+                    <p>{{ variant.variantColor }}</p>
+                </div>
             </div>
 
 
