--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
                 <p v-else-if="inventory <=10 && inventory > 0">Almost sold out! Hurry!</p>
                 <p v-else="OutStock">Out of Stock</p> -->
                 <!-- <a :href="link" target="_blank">See more products like this</a> -->
+
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
+
                 <div v-for="variant in variants" :key="variant.variantId">
-                    <p>{{ variant.variantColor }}</p>
+                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
                 </div>
-                <button>Add to Cart</button>
+
+                <!-- increase cart number when clicked -->
+                <button v-on:click='addToCart'>Add to Cart</button> <button v-on:click='removeFromCart'>Remove</button>
                 <div class="cart">
                     <p>Cart ({{cart}})</p>
                 </div>
