--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
                 <!-- conditional rendering -->
                 <p v-if="inStock">In Stock</p>
                 <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
+                <p>{{sale}}</p>
 
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
                 <!-- binding a style with mouseover -->
-                <div v-for="variant in variants" :key="variant.variantId" class="color-box"
-                    :style="{backgroundColor: variant.variantColor}" @mouseover="updateProduct(variant.variantImage)">
+                <div v-for="(variant,index) in variants" :key="variant.variantId" class="color-box"
+                    :style="{backgroundColor: variant.variantColor}" @mouseover="updateProduct(index)">
                 </div>
 
                 <!-- increase cart number when clicked and class binding instock button turns grey with item is not in stock -->
