--- a/index.html
+++ b/index.html
@@ -13,39 +13,7 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <div class="product">
-
-            <div class="product-image">
-                <!-- v-bind binds an attribute to an expression -->
-                <img v-bind:src="image" v-bind:alt="altText">
-
-            </div>
-
-            <div class="product-info">
-                <h1>{{ title }}</h1>
-                <!-- conditional rendering -->
-                <p v-if="inStock">In Stock</p>
-                <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
-                <p>{{sale}}</p>
-
-                <ul>
-                    <li v-for="detail in details">{{ detail }}</li>
-                </ul>
-                <!-- binding a style with mouseover -->
-                <div v-for="(variant,index) in variants" :key="variant.variantId" class="color-box"
-                    :style="{backgroundColor: variant.variantColor}" @mouseover="updateProduct(index)">
-                </div>
-
-                <!-- increase cart number when clicked and class binding instock button turns grey with item is not in stock -->
-                <button v-on:click='addToCart' :disabled='!inStock' :class="{disabledButton: !inStock}">Add to
-                    Cart</button>
-                <div class="cart">
-                    <p>Cart ({{cart}})</p>
-                </div>
-            </div>
-
-
-        </div>
+        <product :premium="premium"></product>
     </div>
     <!-- Install Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
